# OpenMapper

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  build.sh  build_ros.sh  package.xml  test.sh
cmake_modules/: FindGlog.cmake  Settings.cmake  ios_10_3_config.cmake  xcode_framework_config.cmake
gtest/: pose_test.cc  test_pose.cpp
include/: Wrapper.hpp  frame.h  pose.h  rendering.h  slam-engine.h  wrapper.h
include/openmapper/: common.h  input_source.h  map.h  openmapper.h  pose.h  renderer.h  settings.h  wrapper.h
src/: Wrapper.cpp  common.cc  input_source.cc  main.cc  main.cpp  map.cc  openmapper.cc  pose.cc  renderer.cc  wrapper.cc
src/app/: main.cc
src/app/ros/: CMakeLists.txt  image_grabber.cc  image_grabber.h  main_node.cc  package.xml
src/ros/: CMakeLists.txt  README.md  image_grabber.cc  image_grabber.h  main_node.cc  wrapper_ros.cc  wrapper_ros.h
test/: CMakeLists.txt  config.h  main.cc  pose_test.cc  test.sh
tmp_build/OpenMapper.build/Debug-iphoneos/ORB-SLAM2.build/: dgph
tools/: build.sh  travis_ci_build.sh
tools/destop-app/: build.sh
tools/ios/: generate_om_fw.sh
tools/macos/: generate_xcode.sh
tools/ros/: build.sh  run_ros.sh
wrapper/desktop/: CMakeLists.txt  main_desktop.cc
wrapper/desktop/include/glad/: glad.h
wrapper/desktop/include/openmapper_desktop/: config.h
wrapper/desktop/src/: glad.c  main_desktop.cc  main_desktop2.cc
wrapper/ios/: CMakeLists.txt  open_mapper.h  open_mapper.mm
wrapper/ros/: CMakeLists.txt  README.md  common.h  default.launch  main_ros.cc  openmapper.rviz  openmapper_ros.cc  openmapper_ros.h  package.xml  wrapper_ros.h
