################################
# Google Test Setup
################################

ADD_SUBDIRECTORY(${CMAKE_CURRENT_LIST_DIR}/../thirdparty/googletest/googletest gtest_build)
ENABLE_TESTING()
INCLUDE_DIRECTORIES(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})

################################
# OpenMapper Tests
################################

SET(OPENMAPPER_TESTS "VirtualMirrorTest")
# Add test src files
ADD_EXECUTABLE(${OPENMAPPER_TESTS}
  ${CMAKE_CURRENT_LIST_DIR}/main.cc
  ${CMAKE_CURRENT_LIST_DIR}/pose_test.cc)

# Link test executable against gtest & gtest_main
TARGET_LINK_LIBRARIES(${OPENMAPPER_TESTS}
  gtest gtest_main
  debug ${OPENMAPPER_LIB} optimized ${OPENMAPPER_LIB})

ADD_TEST(${OPENMAPPER_TESTS} ${OPENMAPPER_TESTS})

TARGET_INCLUDE_DIRECTORIES(${OPENMAPPER_TESTS} PUBLIC include)

SET_TARGET_PROPERTIES(${OPENMAPPER_TESTS} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ../bin/ )
SET_TARGET_PROPERTIES(${OPENMAPPER_TESTS} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG ../bin/ )
SET_TARGET_PROPERTIES(${OPENMAPPER_TESTS} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELEASE ../bin/ )
SET_TARGET_PROPERTIES(${OPENMAPPER_TESTS} PROPERTIES RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ../bin/)
SET_TARGET_PROPERTIES(${OPENMAPPER_TESTS} PROPERTIES DEBUG_POSTFIX "_d" )
