<?xml version="1.0"?>
<package>
  <name>open_mapper_ros</name>
  <version>0.0.1</version>
  <description>
    SLAM Library
  </description>

  <author email="gocarlos@ethz.ch">Carlos Gomes</author>
  <maintainer email="gocarlos@ethz.ch">Carlos Gomes</maintainer>
  <url type="repository">https://github.com/OpenMapper/OpenMapper</url>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>pthread</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>opencv</run_depend>
  <run_depend>pthread</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
